# Nuclear-AI-Assistant

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  README.md  requirements.txt
.azuredevops/: cd _pipeline.yml  pr_pipeline.yml  pull_request_template.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
doc/: api-tooling.md  deployment-process.md  getting-started.md  process-framework.md
doc/adr/: 001-choose-azure-ai-search.md  002-start-nureg-architecture.md  003-chat-protocol.md  004-observability-approach.md  005-azure-resource-deployment.md  006-search-index.md  007-search-evaluation.md  008-end-to-end-evaluation.md  README.md  adr-log.md
doc/architecture/: logic-flow-diagram.md
experimental/: ar_numbers_desc_cleaning.ipynb
experimental/Alternative_method_to_download_LER_ground_truth_data_generation/: .dot.env  main.ipynb  requirements.txt
experimental/adams_api_downloader/: README.md  config.py  main.py  requirements.txt
experimental/di_nureg_markdown/: .dev.env  extract_nureg_c32.ipynb  requirements.txt
experimental/doc_ingestion/: adams_to_blob.ipynb  document-api.ipynb
experimental/ground_truth_5072/: .dev.env  READEME.md  ens.ipynb  ground_truth_5072.csv  requirements.txt
experimental/models/: .dev.env  (+3 more)
experimental/sk_agent/: .env.example  README.md  create_index.py  process_documents.py  pyproject.toml  run_sk_agent.py
experimental/sk_agent/draft_notebooks/: index_creation.ipynb  multiagent.ipynb
infra/: README.md  dev.bicepparam  main.bicep  prod.bicepparam  stage.bicepparam
(+191 files in other folders)
